-Deleting and Modifying methods, variables, classes for 2-players mode. -Fixing some global variables to final. -Removing unused comments and other unnecessary lines